--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     }
   },
   "require": {
-    "zver/string-helper": "^3",
-    "zver/common": "^3.0",
+    "zver/string-helper": "dev-master",
+    "zver/common": "dev-master",
     "phpunit/phpunit": "^8.5"
   },
   "require-dev": {
