--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "require": {
     "zver/string-helper": "dev-master",
     "zver/common": "dev-master",
-    "phpunit/phpunit": "^8.5"
+    "phpunit/phpunit": "*"
   },
   "require-dev": {
   }
